foodmenu feature updated

--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
  <title>Pure CSS Leaves Animation Effects</title>
- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  
   <!--this order of swiper css and h.css matters-->
 
@@ -12,8 +12,8 @@
 <link rel="stylesheet" type="text/css" href="button.css">
 <link rel="stylesheet" type="text/css" href="ws.css">
 
-
 <link rel="stylesheet" type="text/css" href="foodmenu.css">
+<!-- <link rel="stylesheet" type="text/css" href="h.css"> -->
 
 <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 <body>
@@ -223,8 +223,11 @@
 
 
    <section class="section">
-     <h1>hello</h1>
-   </section>
+     <!-- <h1>hello1234567891011121314151617181920</h1> -->
+     <div class="hello">
+     <img src="image/foodmenu.jpg"> 
+   </div>
+    </section>
 
    <section class="section" id="page1">
       <h1>hello</h1>
