download button added

--- a/website.html
+++ b/website.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="ws.css">
 
 <link rel="stylesheet" type="text/css" href="foodmenu.css">
-<!-- <link rel="stylesheet" type="text/css" href="h.css"> -->
+<link rel="stylesheet" type="text/css" href="card.css">
 
 <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 <body>
@@ -223,9 +223,10 @@
 
 
    <section class="section">
-     <!-- <h1>hello1234567891011121314151617181920</h1> -->
+    
      <div class="hello">
      <img src="image/foodmenu.jpg"> 
+     <a href="image/foodmenu.jpg" download="foodmenu.jpg" class="download-button">Download Card</a>
    </div>
     </section>
 
