--- a/test.html
+++ b/test.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="foodmenu.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Car and Map Animation</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #87ceeb; /* Sky blue */
+      overflow: hidden;
+    }
+
+    .road {
+      position: relative;
+      width: 100%;
+      height: 150px;
+      background: linear-gradient(to bottom, #444, #333);
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .gap {
+      position: absolute;
+      width: 200px;
+      height: 150px;
+      background: transparent;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .car {
+      position: absolute;
+      width: 100px;
+      height: 50px;
+      background: red;
+      border-radius: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: left 2s linear;
+    }
+
+    .map-popup {
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      background: white;
+      border: 2px solid black;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      display: none;
+      left: calc(50% + 60px);
+      top: calc(50% - 200px);
+    }
+
+    .map-popup img {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
-    
-    <header>
-        <ul>
-            <li class="active">Home</li>
-            <li>Contact</li>
-            <li>Info</li>
-            <li>Category</li>
-        </ul>
-    </header>
-    <div class="slider">
-        <div class="title">
-            Slider Pizza!
-        </div>
-        <div class="images">
-            <div class="item" style="--i: 1">
-                <img src="image/1.PNG">
-            </div>
-            <div class="item" style="--i: 2">
-                <img src="image/1.PNG">
-            </div>
-            <div class="item" style="--i: 3">
-                <img src="image/1.PNG">
-            </div>
-            <div class="item" style="--i: 4">
-                <img src="image/1.PNG">
-            </div>
-            <div class="item" style="--i: 5">
-                <img src="image/1.PNG">
-            </div>
-            <div class="item" style="--i: 6">
-                <img src="image/1.PNG">
-            </div>
-        </div>
-        <div class="content">
-            <div class="item active">
-                <h1>PRODUCT NAME 1</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-            <div class="item">
-                <h1>PRODUCT NAME 2</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-            <div class="item">
-                <h1>PRODUCT NAME 3</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-            <div class="item">
-                <h1>PRODUCT NAME 4</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-            <div class="item">
-                <h1>PRODUCT NAME 5</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-            <div class="item">
-                <h1>PRODUCT NAME 6</h1>
-                <div class="des">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit expedita tenetur consectetur. Ipsum, quibusdam recusandae impedit molestiae libero nobis nemo possimus perspiciatis. Debitis aliquam cum nemo aspernatur expedita ea? Et officia asperiores est aliquam? Doloribus, tenetur non? Minima vero aperiam corporis magni. Officiis, blanditiis. Iusto sint distinctio eaque non culpa.
-                </div>
-                <button>See more</button>
-            </div>
-        </div>
-        <button id="prev"><</button>
-        <button id="next">></button>
+  <div class="road">
+    <div class="gap"></div>
+    <div class="car"></div>
+    <div class="map-popup">
+      <img src="https://via.placeholder.com/120?text=MAP" alt="Map">
     </div>
+  </div>
 
-    <script src="app.js"></script>
+  <script>
+    const car = document.querySelector('.car');
+    const mapPopup = document.querySelector('.map-popup');
+
+    // Animate car
+    setTimeout(() => {
+      car.style.left = '45%'; // Moves to the gap
+    }, 1000);
+
+    // Show map popup
+    setTimeout(() => {
+      car.style.left = '45%'; // Stops at the gap
+      mapPopup.style.display = 'block'; // Shows map
+    }, 3000);
+
+    // Resume car journey
+    setTimeout(() => {
+      mapPopup.style.display = 'none'; // Hides map
+      car.style.left = '80%'; // Car resumes journey
+    }, 5000);
+  </script>
 </body>
 </html>
