--- a/website.html
+++ b/website.html
@@ -248,6 +248,9 @@
 
    <section class="section" id="page1">
       <h1>hello</h1>
+      <a href="test.html">
+      <button >form</button>
+      </a>
     </section>
 </body>
 </html>
