--- a/test.html
+++ b/test.html
@@ -40,15 +40,14 @@
     <script>
         // Firebase configuration
       // Your web app's Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyA-GQk4JnC1RzOi64-bAHfvbElzwZpGW3M",
-  authDomain: "apiii-9327a.firebaseapp.com",
-  databaseURL: "https://apiii-9327a-default-rtdb.firebaseio.com",
-  projectId: "apiii-9327a",
-  storageBucket: "apiii-9327a.firebasestorage.app",
-  messagingSenderId: "814962191443",
-  appId: "1:814962191443:web:c616c771be7d25073e2aa6"
-};
+      const firebaseConfig = {
+    apiKey: "AIzaSyBqudhZs06VNVloFbv5-o_Sc55IXKKFqzw",
+    authDomain: "wish-5dc2b.firebaseapp.com",
+    projectId: "wish-5dc2b",
+    storageBucket: "wish-5dc2b.firebasestorage.app",
+    messagingSenderId: "1027868519968",
+    appId: "1:1027868519968:web:acc17e00521dd4e3e75645"
+  };
 
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
