wish form added

--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 
     <h2>Wishes from Guests:</h2>
     <ul id="wishesList"></ul>
-
+<script scr="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script>
         // Firebase configuration
       // Your web app's Firebase configuration
