--- a/website.html
+++ b/website.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="card.css">
 
 <link rel="stylesheet" type="text/css" href="map.css">
+<link rel="stylesheet" type="text/css" href="wish.css">
 <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 <body>
    
@@ -247,10 +248,11 @@
   </section>
 
    <section class="section" id="page1">
+    <div class="wish">
       <h1>hello</h1>
-      <a href="test.html">
-      <button >form</button>
-      </a>
+      <a href="wish.html">
+      <button class="wishbutton">form</button>
+      </a></div>
     </section>
 </body>
 </html>
