--- a/test.html
+++ b/test.html
@@ -3,96 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Wishes</title>
-    <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-database.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 600px;
-            margin: auto;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-            padding: 10px;
-            background: #f0f0f0;
-            border-radius: 5px;
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Parallax Star Background</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="t.css">
 </head>
 <body>
-    <h1>Guest Wishes</h1>
-    <form id="wishForm">
-        <label for="name">Name (optional):</label><br>
-        <input type="text" id="name" placeholder="Your Name"><br><br>
-        <label for="message">Your Wish/Advice:</label><br>
-        <textarea id="message" rows="4" cols="50" placeholder="Enter your wish or advice"></textarea><br><br>
-        <button type="submit">Submit</button>
-    </form>
-
-    <h2>Wishes from Guests:</h2>
-    <ul id="wishesList"></ul>
-<script scr="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-    <script>
-        // Firebase configuration
-      // Your web app's Firebase configuration
-      const firebaseConfig = {
-    apiKey: "AIzaSyBqudhZs06VNVloFbv5-o_Sc55IXKKFqzw",
-    authDomain: "wish-5dc2b.firebaseapp.com",
-    projectId: "wish-5dc2b",
-    storageBucket: "wish-5dc2b.firebasestorage.app",
-    messagingSenderId: "1027868519968",
-    appId: "1:1027868519968:web:acc17e00521dd4e3e75645"
-  };
-
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        // Form submission
-        document.getElementById('wishForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value || 'Anonymous';
-            const message = document.getElementById('message').value;
-
-            if (!message.trim()) {
-                alert('Please enter a message!');
-                return;
-            }
-
-            // Push data to Firebase Realtime Database
-            try {
-                const newWishRef = db.ref('wishes').push();
-                await newWishRef.set({ name, message });
-                document.getElementById('wishForm').reset();
-                fetchWishes();
-            } catch (error) {
-                console.error('Error saving wish:', error);
-            }
-        });
-
-        // Fetch and display wishes
-        function fetchWishes() {
-            const wishesList = document.getElementById('wishesList');
-            wishesList.innerHTML = '';
-            db.ref('wishes').on('value', (snapshot) => {
-                const wishes = snapshot.val();
-                if (wishes) {
-                    Object.values(wishes).forEach(({ name, message }) => {
-                        const li = document.createElement('li');
-                        li.textContent = `${name}: ${message}`;
-                        wishesList.appendChild(li);
-                    });
-                }
-            });
-        }
-
-        // Load wishes on page load
-        fetchWishes();
-    </script>
+    <section class="wrapper">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+        <div id="title">
+            <span>PURE CSS</span>
+            <br>
+            <span>PARALLAX PIXEL BACKGROUND</span>
+        </div>
+    </section>
 </body>
 </html>
