github pages are case sensitive so fixed code

--- a/website.html
+++ b/website.html
@@ -140,19 +140,19 @@
             <img src="image/grill.png">
         </div>
         <div class="item" style="--i: 2;">
-            <img src="image/Haleem.PNG">
+            <img src="image/Haleem.png">
         </div>
         <div class="item" style="--i: 3;">
-            <img src="image/nan_roti.PNG">
+            <img src="image/nan_roti.png">
         </div>
         <div class="item" style="--i: 4;">
-            <img src="image/tehari.PNG">
+            <img src="image/tehari.png">
         </div>
         <div class="item" style="--i: 5;">
-            <img src="image/chicken_roast.PNG">
+            <img src="image/chicken_roast.png">
         </div>
         <div class="item" style="--i: 6;">
-            <img src="image/zorda.PNG">
+            <img src="image/zorda.png">
         </div>
         <!-- <div class="item" style="--i: 7;"> this is causing other food dishes aside how to fix it??
           <img src="image/doi.PNG">
