changed menu outline

--- a/website.html
+++ b/website.html
@@ -129,8 +129,8 @@
   <div class="slider">
    
     <div class="title">
-      <img src="image/food_menu.png" alt="food">
-     <a href="image/food_menu.png" download="food_menu.png" class="btn">Download 
+      <img src="image/menu.png" alt="food">
+     <a href="image/menu.png" download="menu.png" class="btn">Download 
       Menu</a>
 
       <!-- <button class="btn">click me</button> -->
