changed cover photos

--- a/website.html
+++ b/website.html
@@ -69,7 +69,7 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="image/card.jpg" />
+        <img src="image/invitation.png" />
         <!-- <button class="slide-button" data-target="#page1">Click Me</button> -->
         <!-- <a href="#page1"></a> -->
         <button class="slide-button" data-target="#card">
@@ -80,7 +80,7 @@
       
       </div>
       <div class="swiper-slide">
-        <img src="image/foodmenu.jpg" />
+        <img src="image/menu_cover.png" />
         <button class="slide-button" data-target="#foodmenu">
           <div>
             <span>Click Me</span>
@@ -88,7 +88,7 @@
         </button>
       </div>
       <div class="swiper-slide">
-        <img src="image/games.jpg" />
+        <img src="image/wish_cover.png" />
         <button class="slide-button" data-target="#wish">
           <div>
             <span>Click Me</span>
@@ -96,7 +96,7 @@
         </button>
       </div>
       <div class="swiper-slide">
-        <img src="image/map.jpg" />
+        <img src="image/map_cover.png" />
         <button class="slide-button" data-target="#map">
           <div>
             <span>Click Me</span>
@@ -104,7 +104,7 @@
         </button>
       </div>
       <div class="swiper-slide">
-        <img src="image/ring.jpg" />
+        <img src="image/BR_cover.png" />
         <button class="slide-button" data-target="#love-birds">
           <div>
             <span>Click Me</span>
@@ -239,9 +239,15 @@
    <section class="section" id="card">
     
      <div class="hello">
-     <img src="image/weddingcard.png"> 
-     <a href="image/weddingcard.png" download="wedding_invitation.png" class="download-button">Download Card</a>
-   </div>
+     <img src="image/card.jpeg"> 
+     <a href="image/card.jpeg" download="wedding_invitation.jpeg" class="download-button">Download Card</a>
+<!-- 
+     <video width="100%" height="100%" controls>
+      <source src="image/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
+  <a href="image/weddingcard.png" download="wedding_invitation.png" class="download-button">Download Card</a> 
+   </div> -->
     </section>
 
 
