--- a/website.html
+++ b/website.html
@@ -130,9 +130,11 @@
    
     <div class="title">
       <img src="image/menu.png" alt="food">
-     <a href="image/menu.png" download="menu.png" class="btn">Download 
-      Menu</a>
+     <a href="image/menu.png" download="menu.png" class="btn">Menu 1</a>
 
+      <a href="image/menu2.png" download="menu2.png" class="btn2"> 
+        Menu 2</a>
+  
       <!-- <button class="btn">click me</button> -->
       </div>
     <div class="images">
