--- a/website.html
+++ b/website.html
@@ -311,10 +311,10 @@
                 In silent love, their promises keep.   </p> -->
 
                 <p class="poem">
-                  <span class="line line-1">Two souls from the Mechanical realm, so shy,</span><br>
-                  <span class="line line-2">In quiet grace, their hearts did fly,</span><br>
+                  <span class="line line-1">Thank you all for joining us today.Your presence made this occasion truly special!</span><br>
+                  <!-- <span class="line line-2">In quiet grace, their hearts did fly,</span><br>
                   <span class="line line-3">Shy whispers shared, with kindness so deep,</span><br>
-                  <span class="line line-4">In silent love, their promises keep.</span>
+                  <span class="line line-4">In silent love, their promises keep.</span> -->
               </p>
               </div>
             </div>
